# study-buddy

./: .gitignore  Dockerfile.ollama  README.md  bugs.md  chroma-runner.py  chroma_runner.py  docker-build.sh  docker-compose-nvidia-ollama-nofrontend.yml  docker-compose.dev.yml  docker-compose.yml  document_textractor.py  make_project_directory.py  pyproject.toml  test_new.py  todo.md
backend/: Dockerfile  document_chunker.html  document_textractor.html  dump.rdb  errorlog.txt  example.env  log.txt  permissions.txt  prompt.txt  prompt2.txt  pydoc-markdown.yml  pyproject.toml  run-chroma-db.sh  run-dev-server.sh  run-integration.sh  run_task_queue.sh  supervisord.conf  test_log.txt
backend/app/: document_textractor.py  main.py
backend/chroma_data/: chroma.sqlite3
backend/chroma_db/: chroma.sqlite3
backend/docs/: api.md
backend/documents/: 1-s2.0-S1877050917328570-main.md
backend/secrets/: secrets-go-here.json
backend/src/: __init__.py  celery_app.py  document_chunker.py  document_textractor.py  extensions.py  google_calls.py  main.py  make_celery.py  ollama_calls.py  tasks.py  vector_db.py  wsgi.py
backend/src/textracted/: Ibitoye2021.md
backend/test_upload/: loremipsum.txt
backend/tests/: test_integration.py  test_main.py
backend/textracted/: 3040992.3040998.md  environment.md
backend/uploads/: Sutton Prophet Interview Transcription.txt
chromadb/: chroma.sqlite3
docs/: api.md  example-ollama-curl.txt
frontend/: Dockerfile  example.env  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: DocumentList.js  FileUpload.js  GetModels.js  SearchAndChat.js  StatusMessage.js
