[tool.poetry]
name = "cloud-practitioner-helper"
version = "1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.10"
chromadb = "^0.5.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
