[tool.poetry]
name = "study-buddy"
version = "1"
description = ""
authors = ["Izdar Tohti <itohti@gmail.com>", "Mithran Mohanraj <mithran.mohanraj@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.10"
chromadb = "^0.5.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
