[tool.poetry]
name = "study-buddy"
version = "1"
description = ""
authors = ["Izdar Tohti <itohti@gmail.com>", "Mithran Mohanraj <mithran.mohanraj@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.10"
chromadb = "^0.5.11"
pypdf = "^5.0.1"
markdown = "^3.7"
flask = "^3.0.3"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
