[tool.poetry]
name = "study-buddy"
version = "1"
description = ""
authors = ["Izdar Tohti <itohti@gmail.com>", "Mithran Mohanraj <mithran.mohanraj@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.10"
chromadb = "0.5.11"
pypdf = "5.0.1"
markdown = "3.7"
flask = "3.0.3"
flask-cors = "5.0.0"
nltk = "3.9.1"
ollama = "0.3.3"
pydantic = "2.9.2"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]
testpaths = [
  "tests"
]